--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.19",
     "isbot": "^3.6.5",
+    "marked": "^4.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
