--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "remix build",
     "deploy": "fly deploy --remote-only",
-    "dev": "remix dev",
+    "dev": "yarn dev:sass & yarn dev:app",
+    "dev:sass": "npx sass --watch app/:app/",
+    "dev:app": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc"
   },
@@ -18,8 +20,10 @@
     "graphql-tools": "^8.3.19",
     "isbot": "^3.6.5",
     "marked": "^4.2.12",
+    "node": "^19.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.59.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.14.1",
