--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.14.1",
     "@remix-run/eslint-config": "^1.14.1",
+    "@types/marked": "^4.0.8",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
